--- a/src/docs/components/docs-nav/docs-nav.css
+++ b/src/docs/components/docs-nav/docs-nav.css
@@ -39,7 +39,7 @@
   font: var(--ld-typo-body-s);
   overscroll-behavior: contain;
   overflow: hidden auto;
-  z-index: 1;
+  z-index: 2;
   flex-shrink: 0;
 
   &::before {
